--- a/css/main.css
+++ b/css/main.css
@@ -579,18 +579,18 @@ header {
     width: 100%;
     height: 100%;
     background: red;
-    background: url("../img/article/postercoq.jpg");
+    background: url("../img/gl/Groenland_02.jpg");
     background-position: center bottom;
     background-size: cover; }
   header .header__gradient {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: -moz-radial-gradient(center, ellipse cover, transparent 0%, black 100%);
+    background: -moz-radial-gradient(center, ellipse cover, rgba(0, 0, 0, 0) 0%, black 100%);
     /* FF3.6-15 */
-    background: -webkit-radial-gradient(center, ellipse cover, transparent 0%, black 100%);
+    background: -webkit-radial-gradient(center, ellipse cover, rgba(0, 0, 0, 0) 0%, black 100%);
     /* Chrome10-25,Safari5.1-6 */
-    background: radial-gradient(ellipse at center, transparent 0%, black 100%);
+    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, black 100%);
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=1 );
     /* IE6-9 fallback on horizontal gradient */
