--- a/index.html.twig
+++ b/index.html.twig
@@ -36,7 +36,7 @@
 
 			<div class="video-wrapper">
 				<video playsinline autoplay loop muted>
-				  <source src="img/groenland/video_top.mp4" type="video/mp4">
+				  <source src="img/gl_video/icebergs.mov" type="video/mp4">
 				  Votre navigateur ne supporte pas les vidéos HTML%.
 				</video>
 			</div>
@@ -56,18 +56,9 @@
 				</div>
 			</div>
 
-
-
 			<div class="scroll-indicator">
 				<div class="scroll-indicator-inner"></div>
 			</div>
-
-			<!-- <div class="header-sponsor">
-				<a href="https://www.letemps.ch/partenariats" target="_blank"><span class="charte">[?]</span></a>
-				<a href="https://www.mirabaud.com/fr/" target="_blank"><img src="img/logo-sponsor-only.svg" alt=""></a>
-				<span>Avec le soutien de </span>
-
-			</div> -->
 		</header>
 
 
@@ -150,6 +141,24 @@
 				<p>En revanche, le sud de l’île est presque totalement libéré des glaces toute l’année, permettant le développement de l’agriculture. Au Pilersuisoq, on peut donc être surpris de trouver des pommes de terre «made in Greenland», ou des fraises qui ne sont pas importées. Cela peut faire sourire, mais «les Groenlandais et le gouvernement voient dans la fonte des glaces de véritables opportunités pour eux et pour le pays», soulève Paaluk. Lui-même s’est lancé dans une compagnie de tourisme haut de gamme, ciblant une clientèle sportive en quête de sensations fortes, de paysages exceptionnels et d’une nature unique, autour de l’île d’Uummannaq.</p>
 
 				<p>[VIDEO PAALUK]</p>
+
+
+			</div>
+		</section>
+
+		<!-- SECTION VIDEO -->
+		<section class="video">
+			<div class="video-wrapper">
+				<div class="trigger"></div>
+				<video controls>
+					<source src="img/gl_video/Paaluk_1080.mov"
+					 type="video/mp4"> Votre navigateur ne supporte pas les vidéos HTML%.
+				</video>
+			</div>
+		</section>
+
+		<section>
+			<div class="container">
 
 				<p>«Les Groenlandais connaissent parfaitement la nature arctique. Ils vivent avec elle depuis des siècles. Ils la respectent. Ils observent tous aujourd’hui que leur environnement, la faune et la flore se modifient. Ils ne nient pas qu’il y a un changement mais, dans leur grande majorité, ils pensent que c’est un cycle de la Terre comme leurs ancêtres en ont connu auparavant. Réchauffement ou pas, ils sont convaincus qu’ils s’adapteront, comme ils ont toujours su le faire. Pour le moment, ils saisissent l’opportunité qui leur est offerte. Les Inuits sont pragmatiques. C’est comme cela qu’ils ont toujours survécu»… avec autant de dilemmes que de paradoxes.</p>
 
@@ -298,7 +307,7 @@
 				  <div class="layout">
 				    <img class="zoom lazy" data-original="img/gl/Groenland_33.jpg">
 				    <div class="caption">
-				      Légende
+				      Les adolescents du village de Qeqertaq se retrouvent sur le port. Ils sont généralement partagés entre l’envie de quitter le village et l’attachement à leur famille et leurs coutumes.
 				    </div>
 				  </div>
 				</section>
