--- a/css/_base.scss
+++ b/css/_base.scss
@@ -1,32 +1,32 @@
-@charset "UTF-8"; 
+@charset "UTF-8";
 //=====================================================================//
 // COLORS
 //=====================================================================//
-$black:#000; 
+$black:#000;
 $white:#fff;
-$twitter:#00aced;  
-$facebook:#3d5a98;       
+$twitter:#00aced;
+$facebook:#3d5a98;
 
 $red-lt: #b80021;
-$red-lt-darker: #93b871;  
+$red-lt-darker: #a3c1e1;  // vert -> bleu
 
-$gray: #323232;   
-$odd-color: #f7f7f7; 
+$gray: #323232;
+$odd-color: #f7f7f7;
 
 //=====================================================================//
 // FONTS
 //=====================================================================//
 
 // headings
-//@include font-face("ratio_light", "../fonts/ratio_light", $file-formats: eot woff ttf svg); 
-//@include font-face("ratio_reg", "../fonts/ratio_reg", $file-formats: eot woff ttf svg); 
-  //@include font-face("ratio_medium", "../fonts/ratio_medium", $file-formats: eot woff ttf svg); 
-  //@include font-face("ratio_bold", "../fonts/ratio_bold", $file-formats: eot woff ttf svg); 
+//@include font-face("ratio_light", "../fonts/ratio_light", $file-formats: eot woff ttf svg);
+//@include font-face("ratio_reg", "../fonts/ratio_reg", $file-formats: eot woff ttf svg);
+  //@include font-face("ratio_medium", "../fonts/ratio_medium", $file-formats: eot woff ttf svg);
+  //@include font-face("ratio_bold", "../fonts/ratio_bold", $file-formats: eot woff ttf svg);
 
 // paragraphs
-  //@include font-face("rooney_light", "../fonts/rooney_light", $file-formats: eot woff ttf svg); 
-//@include font-face("rooney_medium", "../fonts/rooney_medium", $file-formats: eot woff ttf svg); 
-  //@include font-face("rooney_bold", "../fonts/rooney_bold", $file-formats: eot woff ttf svg); 
+  //@include font-face("rooney_light", "../fonts/rooney_light", $file-formats: eot woff ttf svg);
+//@include font-face("rooney_medium", "../fonts/rooney_medium", $file-formats: eot woff ttf svg);
+  //@include font-face("rooney_bold", "../fonts/rooney_bold", $file-formats: eot woff ttf svg);
 
 $font1: 'Merriweather';
 $font2: 'Open sans';
@@ -66,15 +66,15 @@ $zModal: 300;
   @if $class == xs {
     @media (max-width: 500px) { @content; }
   }
- 
+
   @else if $class == sm {
-    @media (max-width: 768px) { @content; } 
+    @media (max-width: 768px) { @content; }
   }
- 
+
   @else if $class == md {
     @media (max-width: 992px) { @content; }
   }
- 
+
   @else if $class == lg {
     @media (max-width: 1200px) { @content; }
   }
@@ -82,11 +82,11 @@ $zModal: 300;
   @else if $class == xl {
     @media (max-width: 1600px) { @content; }
   }
- 
+
   @else {
     @warn "Breakpoint mixin supports: xxs, xs, sm, md, lg, xl";
   }
-} 
+}
 
 html { background: $white; color: #222; font-size: 17px; line-height: 1.4; height: 100%; }
 body { height: 100%; }
@@ -98,12 +98,12 @@ h1
     font-size: 80px;
     line-height: 90px;
     color: #fff;
-    //font-family: $font1; 
+    //font-family: $font1;
     font-family: $font1;
     //text-transform: uppercase;
     font-weight: 400;
     text-align: center;
-    -webkit-font-smoothing: antialiased; 
+    -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     margin-bottom: 20px;
     margin-left: auto;
@@ -111,17 +111,17 @@ h1
     max-width: 1005px;
     //text-shadow: rgba(0, 0, 0, 0.3) 0 1px 8px, rgba(0, 0, 0, 0.3) 0px 0px 1px;
 
-     @include breakpoint(sm) { 
+     @include breakpoint(sm) {
         font-size:60px;
         line-height: 70px;
     }
 
-    @include breakpoint(xs) { 
+    @include breakpoint(xs) {
         font-size:40px;
         line-height: 47px;
         text-align: center;
 
-        br 
+        br
         {
             display: none;
         }
@@ -139,20 +139,20 @@ h1
         text-transform: initial;
         margin-top: 30px;
         margin-bottom: 15px;
-        -webkit-font-smoothing: antialiased; 
-        -moz-osx-font-smoothing: grayscale; 
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
 
-        @include breakpoint(sm) { 
+        @include breakpoint(sm) {
             font-size:40px;
             line-height: 60px;
             margin-top: 0;
         }
 
-        @include breakpoint(xs) { 
+        @include breakpoint(xs) {
             font-size:20px;
             line-height:25px;
             margin-top:10px;
-        }        
+        }
     }
 }
 
@@ -163,18 +163,18 @@ h2
     color: #fff;
     font-family: $font2;
     text-align: center;
-    font-weight: 400; 
-    
-    
-    -webkit-font-smoothing: antialiased; 
-    -moz-osx-font-smoothing: grayscale; 
+    font-weight: 400;
+
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     //text-shadow: rgba(0, 0, 0, 0.6) 0 1px 8px, rgba(0, 0, 0, 0.6) 0px 0px 1px;
 
-    @include breakpoint(xs) {   
+    @include breakpoint(xs) {
         font-size: 20px;
         line-height: 30px;
         text-align: center;
-        
+
         br
         {
             display: none;
@@ -183,7 +183,7 @@ h2
 
     &.author
     {
-        @include breakpoint(xs) { 
+        @include breakpoint(xs) {
              display: none;
         }
     }
@@ -196,14 +196,14 @@ h2
         color: white !important;
         //@include transform(translate(-16%, 35%) scale(0.7));
 
-        @include breakpoint(xs) { 
+        @include breakpoint(xs) {
              //transform: translate(0, 50%);
              @include transform(translate(0, -20%) scale(0.75));
              margin-left: 0;
              margin-top: 30;
         }
 
-        a 
+        a
         {
             color: #fff;
 
@@ -214,7 +214,7 @@ h2
         }
     }
 
-    span 
+    span
     {
         font-weight: 700;
     }
@@ -222,9 +222,9 @@ h2
     .fa
     {
         margin: 0 20px 0 20px;
-        pointer: cursor; 
-        
-    }   
+        pointer: cursor;
+
+    }
 }
 
 h3
@@ -233,57 +233,57 @@ h3
     line-height: 45px;
     color: $gray;
     font-family: $font1;
-    font-weight: 400; 
-    -webkit-font-smoothing: antialiased; 
-    -moz-osx-font-smoothing: grayscale; 
+    font-weight: 400;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 
-    @include breakpoint(sm) { 
+    @include breakpoint(sm) {
         font-size:30px;
         line-height: 45px;
     }
 
-    @include breakpoint(xs) {  
+    @include breakpoint(xs) {
         font-size:20px;
-        line-height: 30px; 
+        line-height: 30px;
     }
-   
-    &.inter-titre  
+
+    &.inter-titre
     {
         font-size: 30px;
-        line-height: 45px; 
+        line-height: 45px;
         margin: 30px 0 20px 0;
         font-family: $font2;
         font-weight: 700;
         color: $black;
         text-align: left;
 
-        @include breakpoint(xs) { 
+        @include breakpoint(xs) {
             font-size: 20px;
             line-height: 30px;
             margin: 0px 0 20px 0;
         }
 
-        &.title 
+        &.title
         {
             font-family: $font2;
             font-weight: 900;
             font-size: 45px;
             line-height: 50px;
 
-            @include breakpoint(md) { 
-                
+            @include breakpoint(md) {
+
                 font-size: 35px;
                 line-height: 40px;
             }
 
-            @include breakpoint(xs) { 
-                
+            @include breakpoint(xs) {
+
                 font-size: 30px;
                 line-height: 35px;
             }
         }
     }
-    
+
 }
 
 h4
@@ -294,16 +294,16 @@ h4
     color: lighten($gray, 50%);
     font-family: $font2;
     //text-transform: uppercase;
-    font-weight: 700; 
-    -webkit-font-smoothing: antialiased; 
-    -moz-osx-font-smoothing: grayscale; 
+    font-weight: 700;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 
-    br 
+    br
     {
         display: none;
     }
 
-    span 
+    span
     {
         color: $red-lt-darker;
     }
@@ -318,13 +318,13 @@ h5
     font-family: $font1;
     text-align: center;
     margin: 30px auto 20px auto;
-    font-weight: 400; 
+    font-weight: 400;
     quotes: "«\0000a0" "\0000a0»";
-    -webkit-font-smoothing: antialiased; 
-    -moz-osx-font-smoothing: grayscale; 
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-h6 
+h6
 {
     font-size: 19px;
     line-height: 35px;
@@ -332,24 +332,24 @@ h6
     color: $white;
     font-family: $font2;
     font-weight: lighter;
-    -webkit-font-smoothing: antialiased; 
-    -moz-osx-font-smoothing: grayscale; 
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     text-shadow: rgba(0, 0, 0, 0.6) 0 1px 8px, rgba(0, 0, 0, 0.6) 0px 0px 1px;
 }
 
-p 
+p
 {
     font-size:17px;
     line-height: 34px;
     //color: $black;
     color: #4e4e4e;
     font-family: $font2;
-    font-weight: 400; 
+    font-weight: 400;
     margin-bottom: 34px;
-    -webkit-font-smoothing: antialiased; 
-    -moz-osx-font-smoothing: grayscale; 
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 
-    @include breakpoint(xs) { 
+    @include breakpoint(xs) {
         font-size: 15px;
         line-height: 25px;
         margin-bottom: 25px;
@@ -365,7 +365,7 @@ p
     }
 }
 
-a:not(.footer__link) 
+a:not(.footer__link)
 {
     position: relative;
     color: $red-lt-darker;
@@ -383,7 +383,7 @@ a:not(.footer__link)
     //     position: absolute;
     //     width: 100%;
     //     height: 3px;
-    //     bottom: -2px; 
+    //     bottom: -2px;
     //     left: 0;
     //     background-color: $red-lt-darker;
     //     visibility: hidden;
@@ -399,11 +399,11 @@ a:not(.footer__link)
     //     -webkit-transform: scaleX(1);
     //     transform: scaleX(1);
     // }
-} 
+}
 
-section.text p:first-of-type:first-letter 
+section.text p:first-of-type:first-letter
 {
-    font-family: $font1; 
+    font-family: $font1;
     letter-spacing: 1px;
     float:left;
     font-size: 120px;
@@ -411,14 +411,14 @@ section.text p:first-of-type:first-letter
     font-weight: 300;
     color: lighten($black, 20%);
 
-    @include breakpoint(xs) { 
+    @include breakpoint(xs) {
         font-size: 80px;
     }
 }
 
-section.encart p:first-of-type:first-letter 
+section.story p:first-of-type:first-letter
 {
-    font-family: $font1; 
+    font-family: $font1;
     letter-spacing: 1px;
     float:left;
     font-size: 80px;
@@ -426,7 +426,7 @@ section.encart p:first-of-type:first-letter
     font-weight: 300;
     color: lighten($black, 20%);
 
-    // @include breakpoint(lg) { 
+    // @include breakpoint(lg) {
     //     font-size: 80px;
     // }
 }
@@ -435,7 +435,7 @@ blockquote
 {
     width: 62%;
 
-    @include breakpoint(lg) { 
+    @include breakpoint(lg) {
         width: 80%;
         line-height: 40px;
         margin: 30px 10% 30px 10% !important;
@@ -446,12 +446,12 @@ blockquote
         float: right;
         margin: 0 -210px 20px 40px;
         text-align: left;
-        
-        @include breakpoint(lg) { 
+
+        @include breakpoint(lg) {
             margin: 0 0 20px 40px;
         }
 
-        @include breakpoint(xs) { 
+        @include breakpoint(xs) {
             float: none;
             clear: both;
             text-align: left;
@@ -459,24 +459,24 @@ blockquote
         }
     }
 
-    span 
+    span
     {
         color: lighten($black, 50%);
         font-style: italic;
         font-size:32px;
         line-height: 50px;
         font-family: $font1;
-        font-weight: 400; 
+        font-weight: 400;
         quotes: "«\0000a0" "\0000a0»";
-        -webkit-font-smoothing: antialiased; 
-        -moz-osx-font-smoothing: grayscale; 
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
 
-        @include breakpoint(xs) { 
+        @include breakpoint(xs) {
             font-size: 24px;
             line-height: 36px;
         }
 
-        &:before 
+        &:before
         {
             color: #ccc;
             content: open-quote;
@@ -486,13 +486,13 @@ blockquote
             vertical-align: -2px;
             color: $red-lt-darker;
 
-            @include breakpoint(xs) { 
+            @include breakpoint(xs) {
                 font-size: 30px;
                 vertical-align: -2px;
             }
         }
 
-        &:after 
+        &:after
         {
             color: #ccc;
             content: close-quote;
@@ -502,7 +502,7 @@ blockquote
             vertical-align: -2px;
             color: $red-lt-darker;
 
-            @include breakpoint(xs) { 
+            @include breakpoint(xs) {
                 font-size: 30px;
                 vertical-align: -2px;
             }
@@ -518,11 +518,11 @@ blockquote
         margin-top:17px;
         text-align: right;
 
-        @include breakpoint(lg) { 
+        @include breakpoint(lg) {
             text-align: left;
         }
 
-        @include breakpoint(xs) { 
+        @include breakpoint(xs) {
             margin-top:10px;
         }
     }
@@ -532,14 +532,14 @@ blockquote
 {
     color: lighten($black, 50%);
     width: 62%;
-    -webkit-font-smoothing: antialiased; 
-    -moz-osx-font-smoothing: grayscale; 
-        
-    @include breakpoint(lg) { 
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
+    @include breakpoint(lg) {
         width: 40%;
     }
 
-    @include breakpoint(md) { 
+    @include breakpoint(md) {
         width: 100%;
     }
 
@@ -548,7 +548,7 @@ blockquote
         margin: 10px 60px 18px 0% !important;
         width: 40%;
 
-        @include breakpoint(xs) { 
+        @include breakpoint(xs) {
             width: 100%;
             margin: 10px 0 18px 0 !important;
         }
@@ -559,8 +559,8 @@ blockquote
         float: left;
         margin: 10px 60px 20px -210px;
         text-align: left;
-        
-        @include breakpoint(lg) { 
+
+        @include breakpoint(lg) {
             margin: 10px 40px 20px 0%;
         }
     }
@@ -571,7 +571,7 @@ blockquote
         margin: 15px -210px 20px 60px;
         text-align: right;
 
-        @include breakpoint(lg) { 
+        @include breakpoint(lg) {
             margin: 15px 0% 20px 40px;
         }
     }
@@ -586,14 +586,9 @@ blockquote
         font-size: 11px;
         line-height: 17px;
 
-        @include breakpoint(md) { 
+        @include breakpoint(md) {
             text-align: left;
-            
+
         }
     }
 }
-
-
-
-
-
