--- a/index.html.twig
+++ b/index.html.twig
@@ -61,7 +61,26 @@
 </div>
 </header>
 
+<section class="encart padding-bottom odd">
+            
+        <div class="spacer-small"></div>
+        <div class="spacer-small"></div>
+        <div class="container">
+            <h3 class="inter-titre title"><b>Qu'est-ce que Humans & Climate Change&nbsp;?</b></h3>
+            <!-- <h4>
+               RailAway, la filiale loisirs des CFF, vous propose tout au long de l’année les meilleures offres pour vos prochaines escapades.<br><br> Voyager en train pour ses loisirs, c’est découvrir son pays tout en respectant l’environnement et en prenant du temps pour soi. À travers les fenêtres panoramiques des trains de plaine ou de montagne, laissez-vous surprendre par des paysages idylliques.
+            </h4> -->
+            <p>
+            	<b>Humans & Climate Change</b> est un projet porté par le journaliste Samuel Turpin, qui suit 12 familles réparties sur le globe, directement impactées par les effets du changement climatique. À travers leurs récits, et la mise en perspective des dynamiques sociales et géopolitiques, il tente de mieux comprendre quels sont les effets du changement climatique sur notre vie quotidienne, nos capacités de résilience et d'adaptation. <i>Le Temps</i> accueille ici son reportage réalisé au Groenland en 2017, où il retournera en 2020 pour retrouver ces familles.
+            </p>
+			<p>
+				Le site du projet: <a href="https://www.humansclimatechange.com/" target="_blank"><b>www.humansclimatechange.com</b></a>
+			</p>
 
+           <br><br><br>
+            
+        </div>
+    </section>
 
 <section class="text">
 	<div class="container">
@@ -82,13 +101,12 @@
 	</div>
 </section>
 
-<section class="encart padding-top padding-bottom">
-	<!-- css dans _layout > .projet -->
+<!-- <section class="encart padding-top padding-bottom">
 	<div class="container projet">
 		<p>Humans & Climate Change est un projet porté par le journaliste Samuel Turpin, qui suit 12 familles réparties sur le globe, directement impactées par les effets du changement climatique. À travers leurs récits, et la mise en perspective des dynamiques sociales et géopolitiques, il tente de mieux comprendre quels sont les effets du changement climatique sur notre vie quotidienne, nos capacités de résilience et d'adaptation. <i>Le Temps</i> accueille ici son reportage réalisé au Groenland en 2017, où il retournera en 2020 pour retrouver ces familles.</p>
 		<p>Le site du projet: <a href="https://www.humansclimatechange.com/" target="_blank">www.humansclimatechange.com</a></p>
 	</div>
-</section>
+</section> -->
 
 <section class="story">
 
@@ -124,7 +142,7 @@
 	</div>
 </section>
 
-<section>
+<section class="padding-bottom">
 	<div class="container">
 		<p>Niels a toujours chassé et pêché ici, à Qeqertaq. Son père lui a tout appris de la nature arctique. Pendant trois ans, entre 1999 et 2002, il est parti tenter sa chance à Qeqertarsuaq, de l’autre côté de la baie, sur l’île de Disko. C’était au temps où la morue avait disparu des eaux côtières. Mais l’expérience n’avait pas été assez concluante pour lui donner l’envie d’y rester. Nous n’avons pas de langue commune. Notre langage sera la complicité. Celle qui se gagne dans le respect et dans les gestes. Sa femme Hanne, institutrice à l’école du village, et sa fille cadette Maali seront nos interprètes.</p>
 
@@ -135,8 +153,9 @@
 		<div class="block-content right">
 			<img class="zoom lazy" data-original="img/gl/Groenland_32.jpg">
 			<div class="caption">
-				<b>QEQERTAQ</b>. Le village donne une impression de vide-grenier.</div>
+				<b>QEQERTAQ</b>. Le village donne une impression de vide-grenier.
 			</div>
+		</div>
 			<p>Pas de route, mais des sentiers et des escaliers en bois qui relient les maisons, bordés par des conduites d’eau et des gaines électriques enveloppées de matériaux isolants pour résister au froid mordant de l’hiver, et une impression de vide-greniers laissée par les carcasses d’appareils électroménagers et de motoneiges abandonnées ici et là, faute de recyclage. Un problème qui se pose dans tous les villages et qui peine à trouver des solutions. L’école primaire, qui accueillera à la rentrée prochaine 18 enfants, l’église, le Pilersuisoq – décidément incontournable – et l’usine de pêche qui arbore le sigle de la société étatique, la Royal Greenland.</p>
 
 
@@ -145,8 +164,10 @@
 			<p>L’usine ne transforme pas sur place. Les pêcheurs apportent leur prise du jour; les poissons sont nettoyés, vidés, emballés puis congelés dans des chambres froides à -25°C, avec ou sans la tête, qui peut être vendue à part, selon le marché de destination (asiatique, américain ou européen). Ce sont là les consignes de la Royal Greenland.</p>
 			<p>«La pêche, c’est l’ADN des Inuits, surtout depuis qu’on ne peut plus vraiment chasser. C’est avec la pêche que l’on gagne notre vie. En bateau l’été, au trou l’hiver en plongeant des traînes sur lesquelles sont accrochés des hameçons», explique Niels. Et l’usine, c’est le cordon ombilical. «Dans tous les villages de la côte, à l’exception des quelques postes de fonctionnaires ou des employés de la Royal Greenland, les hommes sont pêcheurs. Les femmes les aident et beaucoup travaillent à l’usine. Si ce n’est pas la femme, c’est la fille ou le fils.» Une chaîne logique, mais aussi un dangereux schéma de dépendance.</p>
 
-		</div>
-	</section>
+	</div>
+</section>
+
+	
 
 </div>
 </section>
@@ -267,7 +288,7 @@
 	</div>
 </section>
 
-<section>
+<section class="padding-bottom">
 	<div class="container">
 
 		<p>«Les Groenlandais connaissent parfaitement la nature arctique. Ils vivent avec elle depuis des siècles. Ils la respectent. Ils observent tous aujourd’hui que leur environnement, la faune et la flore se modifient. Ils ne nient pas qu’il y a un changement mais, dans leur grande majorité, ils pensent que c’est un cycle de la Terre comme leurs ancêtres en ont connu auparavant. Réchauffement ou pas, ils sont convaincus qu’ils s’adapteront, comme ils ont toujours su le faire. Pour le moment, ils saisissent l’opportunité qui leur est offerte. Les Inuits sont pragmatiques. C’est comme cela qu’ils ont toujours survécu»… avec autant de dilemmes que de paradoxes.</p>
@@ -318,7 +339,7 @@
 		</div>
 	</section>
 
-	<section>
+	<section class="padding-bottom">
 		<div class="container">
 
 			<h3>Nouvelles voies maritimes</h3>
@@ -630,11 +651,11 @@
 								<!--<script src="js/video-control.js"></script>-->
 								<!--<script src="js/map-anim.js"></script>-->
 								<!--<script src="js/hero-control.js"></script>-->
-								<script src="js/animation-pesticides.js"></script>
-								<script src="js/animation-charts.js"></script>
+								<!--<script src="js/animation-pesticides.js"></script>
+								<script src="js/animation-charts.js"></script>-->
 								<script src="js/zoom.js"></script>
 								<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>
-								<script src="js/jquery.counterup.min.js"></script>
+								<!--<script src="js/jquery.counterup.min.js"></script>-->
 								<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.bundle.js"></script>
 								<script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.4/SmoothScroll.min.js"></script>
 							</body>
