poster img pour videos

--- a/index.html.twig
+++ b/index.html.twig
@@ -22,13 +22,14 @@
 <body style="padding-top: {{ navBarOffset }};">
 	{{ block('bar_brand') }}
 
-	<!-- <div class="overlay">
-	<img class="logo-lt-blanc" src="img/logo-lt-blanc.svg" alt="">
-	<div class="spinner">
-	<div class="double-bounce1"></div>
-	<div class="double-bounce2"></div>
-</div>
-</div> -->
+
+	<div class="overlay">
+		<img class="logo-lt-blanc" src="img/logo-lt-blanc.svg" alt="">
+		<div class="spinner">
+			<div class="double-bounce1"></div>
+			<div class="double-bounce2"></div>
+		</div>
+	</div>
 
 <header>
 	<div class="header__bg"></div>
@@ -62,7 +63,7 @@
 </header>
 
 <section class="encart padding-bottom odd">
-            
+
         <div class="spacer-small"></div>
         <div class="spacer-small"></div>
         <div class="container">
@@ -77,8 +78,8 @@
 				Le site du projet: <a href="https://www.humansclimatechange.com/" target="_blank"><b>www.humansclimatechange.com</b></a>
 			</p>
 
-           <br><br><br>
-            
+           <div class="br-fix"><br><br><br></div>
+
         </div>
     </section>
 
@@ -148,7 +149,7 @@
 
 		<h3>Un village sans routes</h3>
 
-		<p>Qeqertaq est un village de pêcheurs situé au nord de la baie de Disko, sur la côte ouest du Groenland, accessible par le bateau qui fait la liaison avec <b>Ilulissat</b> une fois par semaine, le jeudi, quand la mer n’est pas prise par les glaces. L’hiver, c’est l’hélicoptère qu’il faut réserver. Cent quinze habitants, 35 maisons, dont 8 sont abandonnées. Vers 19 heures, on entend les longues plaintes des chiens impatients de se jeter sur leur unique repas quotidien. Ils sont attachés tout l’été à quelques minutes du village, ou en liberté sur une petite île proche, en attendant l’activité hivernale. Seuls les chiots nés cette année [ndlr: en 2017] déambulent librement dans le village, suivant les gamins qui vont du port au terrain de jeu, de la maison communale au Pilersuisoq, petit supermarché ravitaillé par containers, pour acheter des chips salées et des sucreries acidulées, puis repassent par le port pour jeter une ligne et «se faire la main».</p>
+		<p>Qeqertaq est un village de pêcheurs situé au nord de la baie de Disko, sur la côte ouest du Groenland, accessible par le bateau qui fait la liaison avec Ilulissat une fois par semaine, le jeudi, quand la mer n’est pas prise par les glaces. L’hiver, c’est l’hélicoptère qu’il faut réserver. Cent quinze habitants, 35 maisons, dont 8 sont abandonnées. Vers 19 heures, on entend les longues plaintes des chiens impatients de se jeter sur leur unique repas quotidien. Ils sont attachés tout l’été à quelques minutes du village, ou en liberté sur une petite île proche, en attendant l’activité hivernale. Seuls les chiots nés cette année [ndlr: en 2017] déambulent librement dans le village, suivant les gamins qui vont du port au terrain de jeu, de la maison communale au Pilersuisoq, petit supermarché ravitaillé par containers, pour acheter des chips salées et des sucreries acidulées, puis repassent par le port pour jeter une ligne et «se faire la main».</p>
 		<!-- ENCART DROIT à L'INTéRIEUR D'UN PARAGRAPHE. DOIT ÊTRE DANS UNE SECTION -->
 		<div class="block-content right">
 			<img class="zoom lazy" data-original="img/gl/Groenland_32.jpg">
@@ -167,7 +168,7 @@
 	</div>
 </section>
 
-	
+
 
 </div>
 </section>
@@ -278,7 +279,7 @@
 <section class="video">
 	<div class="video-wrapper">
 		<div class="trigger"></div>
-		<video controls muted>
+		<video controls muted poster="img/gl-video-poster/paaluk_poster.jpg">
 			<source src="https://player.vimeo.com/external/335361298.hd.mp4?s=0e1d51dd32f6b52ca3a7e0d9cb356ef345acec19&profile_id=175"
 			type="video/mp4"> Votre navigateur ne supporte pas les vidéos HTML%.
 		</video>
@@ -448,7 +449,7 @@
 				<section class="video">
 					<div class="video-wrapper">
 						<div class="trigger"></div>
-						<video controls>
+						<video controls poster="img/gl-video-poster/peche_poster.jpg">
 							<source src="https://player.vimeo.com/external/335361431.hd.mp4?s=df05515edcd0763f055b1e9c2b54bd2da7986931&profile_id=169"
 							type="video/mp4"> Votre navigateur ne supporte pas les vidéos HTML%.
 						</video>
@@ -639,7 +640,7 @@
 								<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 								<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenMax.min.js"></script>
 								<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.js"></script>
-								<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script> -->
+								<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
 								<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.js"></script>
 								<script src="js/jquery.lazyload.js?v=1.9.7"></script>
 								<script src="js/intro-control.js"></script>
